<resources>
    <string name="app_name">SplitWise</string>
    <string name="streak">🔥</string>
    <string name="select_payer">Select Payer</string>
    <string name="select_payee">Select Payee</string>
    <string name="filter_by">Filter By</string>
    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="expenses">Expenses</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="overview">Overview</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="theme">Theme</string>
    <string name="members">Members</string>
    <string name="members_share">Members Share</string>
    <string name="bills">Bills</string>
    <string name="bill">Bill</string>
    <string name="add_member">Add Member</string>
    <string name="add_expense">Add Expense</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="total_expense">Total Expense</string>
    <string name="add_bill">Upload Bill</string>
    <string name="choose_members">Choose Members</string>
    <string name="create">Create</string>
    <string name="settle_up">Settle Up</string>
    <string name="splitwise">Splitwise</string>
    <string name="payer">Payer</string>
    <string name="payee">Payee</string>
    <string name="choose_payee">Choose Payee</string>
    <string name="settle">Settle</string>
    <string name="select_all">Select All</string>
    <string name="select_group">Select Group</string>
    <string name="expense_members">Expense Members</string>
    <string name="choose_payer">Choose Payer</string>
    <string name="select_category">Select Category</string>
    <string name="amount">Amount</string>
    <string name="group_name">Group Name</string>
    <string name="expense_name">Expense Name</string>
    <string name="filter_by_date">Filter By Date</string>
    <string name="filter_by_amount">Filter By Amount</string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="filter">Filter</string>
    <string name="Import">Import</string>
    <string name="tamil">Tamil(தமிழ்)</string>
    <string name="english">English</string>
    <string name="hindi">Hindi(हिन्दी)</string>
    <string name="create_edit_group">Create Group</string>
    <string name="create_group">Create Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="group_overview">Group Overview</string>
    <string name="expense_overview">Expense Overview</string>
    <string name="Default">Default</string>
    <string name="boxed">Boxed</string>
    <string name="clear">Clear</string>
    <string name="no_payee_selected">No Payee Selected</string>
    <string name="owed">Owed</string>
    <string name="lent">Lent</string>
    <string name="edit">Edit</string>
    <string name="register">Register</string>
    <string name="group_icon">Group Icon</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="web">Web</string>
    <string name="no_contacts">No contacts to choose</string>
    <string name="retry">Retry</string>
    <string name="no_results">Results could not be loaded</string>
    <string name="total">Total</string>
    <string name="no_group_icon">No group icon selected</string>
    <string name="selected_groups">Selected Groups</string>
    <string name="data_imported">Data imported</string>
    <string name="expense_added">Expense Added</string>
    <string name="expense_updated">Expense updated</string>
    <string name="atleast_1_payee">Atleast 1 payee should be selected</string>
    <string name="enter_all_fields_expense">Enter all fields to add expense</string>
    <string name="member_exists_already">Member already exists</string>
    <string name="group_created_successfully">Group created successfully</string>
    <string name="owes_nothing">Owes nothing</string>
    <string name="group_name_missing">Group name missing</string>
    <string name="internet_unavailable">Internet unavailable</string>
    <string name="add_atleast_2_group">Add atleast 2 members to create group</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="error_adding_image">Error adding image</string>
    <string name="error">Error</string>
    <string name="select_payees">Select payee(s)</string>
    <string name="select_contact">Select contact</string>
    <string name="need_to_implement">You look stunning</string>
    <string name="shape">Shape</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="cancel">Cancel</string>
    <string name="no_bills">No bills found</string>
    <string name="discard">Discard</string>
    <string name="discard_changes">Do you want to discard changes?</string>
    <string name="delete_message">Are you sure want to delete?</string>
    <string name="enter_amount">Enter amount</string>
    <string name="share">Share</string>
    <string name="download_failed">Download has been failed, please try again</string>
    <string name="paused">Paused</string>
    <string name="pending">Pending</string>
    <string name="downloading">Downloading</string>
    <string name="group_icon_set">Group icon set</string>
    <string name="nothing_to_download">There\'s nothing to download</string>
    <string name="bitmap_not_found">Bitmap not found</string>
    <string name="selected">Selected</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="tickets">Tickets</string>
    <string name="rent">Rent</string>
    <string name="fees">Fees</string>
    <string name="repairs">Repairs</string>
    <string name="entertainment">Entertainment</string>
    <string name="essentials">Essentials</string>
    <string name="others">Others</string>
    <string name="date">Date</string>
    <string name="below">Below</string>
    <string name="above">Above</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="settled_successfully">Settled successfully</string>
    <string name="member_icon">Member icon</string>
    <string name="test">above %s</string>
    <string name="member_profile">Member profile</string>
    <string name="edit_member">You can edit member name, phone, and member profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="member_updated">Member updated</string>
    <string name="proceed">Continue</string>
    <string name="storage_permission">To save photos, allow Splitwise access to your device\'s storage</string>
    <string name="date_filter">%1$s %2$s</string>
    <string name="amount_filter">%1$s ₹%2$s</string>
    <string name="send">Send</string>
    <string name="enter_feedback">Enter feedback</string>
    <string name="empty_feedback">Enter feedback to proceed</string>
    <string name="feedback">Feedback</string>
    <string name="no_groups">No groups found</string>
    <string name="no_expenses">No expenses found</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="enter_10_numbers">Enter 10 numbers</string>
    <string name="all_settled">All settled</string>
    <string name="group_card_transition_name">group_card_transition_%1$s</string>
    <string name="expense_card_transition_name">expense_card_transition_%1$s</string>
    <string name="expenses_transition_name">expenses_transition</string>
    <string name="expense_detail_transition_name">expense_detail_transition</string>
    <string name="bill_image_transition_name">bill_image_transition_%1$s</string>
    <string name="bill_holder_transition_name">bill_holder_transition</string>
    <string name="create_edit_group_icon_transition_name">create_edit_group_icon_transition</string>
    <string name="create_edit_group_empty_icon_transition_name">create_edit_group_empty_icon_transition</string>
    <string name="group_icon_transition_name">group_icon_transition</string>
    <string name="group_image_transition_name">group_image_transition_%1$s</string>
    <string name="group_empty_image_transition_name">group_empty_image_transition_%1$s</string>
    <string name="create_edit_group_members_transition_name">create_edit_group_member_transition_%1$s</string>
    <string name="member_profile_transition_name">member_profile_transition</string>
    <string name="member_payment_stat_transition_name">member_payment_stat_transition_name_%1$s</string>
    <string name="settle_up_transition_name">settle_up_transition_name</string>
    <string name="group_settle_up_transition_name">group_settle_up_transition_name</string>
    <string name="feedback_transition_name">feedback_transition_name</string>
    <string name="settings_feedback_transition_name">settings_feedback_transition_name</string>
    <string name="create_edit_group_transition_name">create_edit_group_transition</string>
    <string name="create_edit_group_view_contribution_transition_name">create_edit_group_view_contribution_transition</string>
    <string name="groups_add_group_transition_name">groups_add_group_transition</string>
    <string name="expenses_add_member_transition_name">expenses_add_member_transition</string>
    <string name="expenses_add_expense_transition_name">expenses_add_expense_transition</string>
    <string name="add_expense_transition_name">add_expense_transition</string>
    <string name="set_image_transition_name">set_image_transition_name</string>
    <string name="group_search_image_transition_name">group_search_image_transition_%1$s</string>
    <string name="search_group_card_transition_name">search_group_card_transition_%1$s</string>
    <string name="search_group_icon_transition_name">search_group_icon_transition</string>
    <string name="search_group_image_transition_name">search_group_image_transition_%1$s</string>
    <string name="search_group_empty_image_transition_name">search_group_empty_image_transition_%1$s</string>
    <string name="update">Update</string>
    <string name="system">System default</string>
    <string name="downloading_group_icon">Group icon is been downloading, we need your patience</string>
    <string name="unselect_all">Unselect all</string>
    <string name="upload">Upload</string>
    <string name="amount_greater_than_0">Amount should be greater than 0</string>
    <string name="confirm_adding_expense">Confirm adding expense?</string>
    <string name="confirm_editing_expense">Confirm expense edit?</string>
    <string name="confirm_editing_group">Confirm group edit?</string>
    <string name="confirm">Confirm</string>
    <string name="add_members">Add Members</string>
    <string name="payer_should_not_deleted">Payer should not be deleted</string>
    <string name="removed_members">Removed members</string>
    <string name="split">Split</string>
    <string name="view_contributions">View contributions ➤</string>
    <string name="group_expenses">Group expenses</string>
    <string name="delete_group">Delete group</string>
    <string name="delete_expense">Delete expense</string>
    <string name="delete_expense_message">This will delete \"%1$s\" expense.\n\nAre you sure want to delete?</string>
    <string name="delete_group_message">This will delete \"%1$s\" group and all its expenses.\n\nAre you sure want to delete?</string>
    <string name="expense_not_edited">Expense not edited</string>
    <string name="direct_settle">Direct settle</string>
    <string name="upload_bill">Upload Bill</string>
</resources>