<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bill_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/upload_bill"
        android:textColor="@color/text_bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/camera_image_holder"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@color/view_color"
        app:layout_constraintEnd_toStartOf="@+id/gallery_image_holder"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/bill_title"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/Circular"
        tools:layout_editor_absoluteY="67dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gallery_image_holder"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@color/view_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/camera_image_holder"
        app:layout_constraintTop_toBottomOf="@id/bill_title"
        app:shapeAppearanceOverlay="@style/Circular" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cameraImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintEnd_toEndOf="@+id/camera_image_holder"
        app:layout_constraintStart_toStartOf="@+id/camera_image_holder"
        app:layout_constraintTop_toTopOf="@id/camera_image_holder"
        app:layout_constraintBottom_toBottomOf="@id/camera_image_holder"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/galleryImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintEnd_toEndOf="@+id/gallery_image_holder"
        app:layout_constraintStart_toStartOf="@+id/gallery_image_holder"
        app:layout_constraintTop_toTopOf="@id/gallery_image_holder"
        app:layout_constraintBottom_toBottomOf="@id/gallery_image_holder" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/camera_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:lines="1"
        android:text="@string/camera"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/camera_image_holder"
        app:layout_constraintStart_toStartOf="@id/camera_image_holder"
        app:layout_constraintTop_toBottomOf="@id/camera_image_holder" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gallery_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:lines="1"
        android:text="@string/gallery"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gallery_image_holder"
        app:layout_constraintStart_toStartOf="@id/gallery_image_holder"
        app:layout_constraintTop_toBottomOf="@id/gallery_image_holder" />


</androidx.constraintlayout.widget.ConstraintLayout>